--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body{
   height: 40px;
   width: 200px;
   background-color: rgb(131, 195, 251);
-  font-size: 25px;
+  /* font-size: 25px; */
 }
 
 
