--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,16 @@ body{
   color: white;
 }
 
-.title{
-  font-size: 30px;
+.title .btn, .title{
+  font-size: 20px;
   text-align: center;
+  color: white;
 }
 
-.history ol li button{
+.title{
+  font-size: 30px;
+}
+.history ol li button, .btn{
   border-radius: 5px;
   height: 40px;
   width: 200px;
