--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,34 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body{
   background-color: rgb(50, 50, 50);
   height: 100vh;
   width: 100vw;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
-
-.game{
-  width: 80vw;
+.game {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+
 }
+
+
+.game .title{
+  width: 350px;
+  height: 100vh;
+  font-size: 30px;
+  /* background-color: aliceblue; */
+  padding: 50px;
+}
+
 
 .status{
   display: flex;
@@ -24,9 +38,21 @@ body{
   margin-bottom: 25px;
 }
 
+
 .history{
-  font-size: 25px;
+  width: 350px;
+  height: 100vh;
+  font-size: 30px;
+  /* background-color: aliceblue; */
+  padding: 50px;
   color: white;
+}
+.board-design{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title .btn, .title{
@@ -35,15 +61,14 @@ body{
   color: white;
 }
 
-.title{
-  font-size: 30px;
-}
+
 .history ol li button, .btn{
   border-radius: 5px;
   height: 40px;
   width: 200px;
   background-color: rgb(131, 195, 251);
   /* font-size: 25px; */
+  cursor: pointer;
 }
 
 
